tornado.gen.coroutine test

--- a/templates/see.html
+++ b/templates/see.html
@@ -5,7 +5,7 @@
     <title>Learning Python</title>
 </head>
 <body>
-    <h2> 登录页面</h2>
+    <h2> SEE页面</h2>
     <p>用用户名为：{{user}}登录</p>
     <form method="POST">
         <p><span>UserName:</span><input type="text" id="username"/></p>
